Had to change the gradle for the api to work let me know if there's any issues